<resources>
    <string name="app_name">Practica5</string>
    <string name="send">SEND</string>
    <string name="next">NEXT</string>
    <string name="choose_the_correct">Choose the correct</string>
    <string name="pregunta1">How many genders exists?</string>
    <string name="respuestaCorrecta1">2</string>
    <string name="respuestaIncorrecta1">2+</string>
    <string name="pregunta2">What`s the fourth letter of the abecedary?</string>
    <string name="pregunta3">Who discover the gravity?</string>
    <string name="selecciona">You must to select an answer</string>
    <string name="acierto">It`s correct!</string>
    <string name="fallo">You have failed</string>
    <string name="start">Start again</string>
    <string name="finalisimo">Congratulations, you have finished</string>
    <string name="mi_calculadora">My calculator</string>
    <string name="bienvenida">Welcome to my APP Calculator</string>
    <string name="pedir_n1">Insert the first number</string>
    <string name="n1">Number 1</string>
    <string name="n2">Number 2</string>
    <string name="pedir_n2">Insert the second number</string>
    <string name="sumar">ADD</string>
    <string name="restar">SUBS</string>
    <string name="mult">MULT</string>
    <string name="dividir">DIVIDE</string>
    <string name="resultado">The result of the operation is:</string>
    <string name="error">Do not put not numeric chars</string>
    <string name="result_format">If you were a dog, you would be %d years old</string>
    <string name="you_have_to_insert_an_age">You have to insert an age.</string>
    <string name="calculate">Calculate</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="your_age">Your age</string>
    <string name="alberto_ejemplo">How old are you?</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>